--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<style>
 			body { margin: 0; }
 		</style>
+
+		<script type="importmap">
+			{
+			  "imports": {
+				"three": "https://unpkg.com/three@v0.160.0/build/three.module.js",
+				"three/addons/": "https://unpkg.com/three@v0.160.0/examples/jsm/"
+			  }
+			}
+		  </script>
+
 	</head>
 	<body>
 		<script type="module" src="/main.js"></script>
