Airport data import done

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>PlaneGlobe</title>
-		<style>
-			body { margin: 0; }
-		</style>
+<head>
+  <meta charset="utf-8">
+  <title>PlaneGlobe</title>
+  <style>
+    body { margin: 0; }
+  </style>
 
-		<script type="importmap">
-			{
-			  "imports": {
-				"three": "https://unpkg.com/three@v0.160.0/build/three.module.js",
-				"three/addons/": "https://unpkg.com/three@v0.160.0/examples/jsm/"
-			  }
-			}
-		</script>
-
-	</head>
-	<body>
-		<script type="module" src="/main.js"></script>
-	</body>
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@v0.160.0/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@v0.160.0/examples/jsm/"
+      }
+    }
+  </script>
+</head>
+<body>
+  <script type="module" src="./JavaScripts/main.js"></script>
+</body>
 </html>
