Search bars done

--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
   </script>
 </head> 
 <body>
-    <div class="search-box">
+    <div class="search-box-start">
       <div class="row"> 
-        <input type="text" id="input-box" placeholder="Search Airport" autocomplete="off">
+        <input type="text" id="input-box-start" placeholder="Search Start" autocomplete="off">
         <button type="search-button" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-search"></span> Search
         </button>
       </div>
-      <div class = "result-box">
+      <div class = "result-box-start">
+      </div>
+    </div>
+
+    <div class="search-box-end">
+      <div class="row"> 
+        <input type="text" id="input-box-end" placeholder="Search End" autocomplete="off">
+        <button type="search-button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-search"></span> Search
+        </button>
+      </div>
+      <div class = "result-box-end">
       </div>
     </div>
     <script type="module" src="./JavaScripts/main.js"></script>
