Missing plane model

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     {
       "imports": {
         "three": "https://unpkg.com/three@v0.160.0/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@v0.160.0/examples/jsm/"
+        "three/addons/loaders/GLTFLoader.js": "https://unpkg.com/three@v0.160.0/examples/jsm/loaders/GLTFLoader.js"
       }
     }
   </script>
