--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="controls-container">
     <div class="search-box-start">
       <div class="row"> 
-        <input type="text" id="input-box-start" placeholder="Search Start" autocomplete="off">
+        <input type="text" id="input-box-start" placeholder="Departure Airport" autocomplete="off">
       </div>
       <div class = "result-box-start">
       </div>
@@ -27,7 +27,7 @@
 
     <div class="search-box-end">
       <div class="row"> 
-        <input type="text" id="input-box-end" placeholder="Search End" autocomplete="off">
+        <input type="text" id="input-box-end" placeholder="Arrival Airport" autocomplete="off">
       </div>
       <div class = "result-box-end">
       </div>
